Fix the overflow problem of the addon in form component

--- a/src/form.less
+++ b/src/form.less
@@ -139,6 +139,7 @@ textarea.form-control{
     white-space: nowrap;
     background-color: #fafafa;
     border: 1px solid #ccc;
+    overflow: hidden;
     &:first-child{
       border-right: 0;
     }
